--- a/style.css
+++ b/style.css
@@ -1,19 +1,22 @@
 
 body{
-    height: 1000vh;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 header{
     position: sticky;
     top: 0;
+    height: 10%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-bottom: 10px;
-    border-bottom: 3px solid #E0DADA;
+    border-bottom: 1px solid #E0DADA;
     box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
--webkit-box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
--moz-box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
+    -webkit-box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
+    -moz-box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
 }
 .logo{
     display: flex;
@@ -35,10 +38,14 @@ header{
     padding-left: 10px;
     color: #C1B0B3;
     opacity: 0.5;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+
 }
 .search input:focus{
     outline: none;
 }
+
 .perfil{
     display: flex;
     flex-direction: row;
@@ -56,62 +63,75 @@ header{
     border: 3px solid #FDABB5;
 }
 
-/* CSS DO POST:*/
+/*Novo estilo:*/
+
 .post{
-    width: 557px;
-    height: 720px;
+    display: flex;
+    flex-direction: column;
+    width: 35%;
+    height: fit-content;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 23px;
-
+    margin-bottom: 2%;
+    align-self: center;
 }
-.user img{
-    height: 57px;
-    width: 55px;
-    border-radius: 56px;
-    border: 3px solid #FDABB5;
+.fotoUsuario{
+    height: 70px;
+    width: 70px;
+    border-radius: 70px;
+    border: #E70073 solid 2px;
 }
-.user{
-    display: flex;
-    padding-left: 15px;
-    padding-top: 20px;
-    align-items: center;
-}
-.user h1{
-    padding-left: 20px;
+.nomeUsuario{
     font-family: 'Kanit', sans-serif;
-    font-size: 15px;
+    font-size: 20px;
 }
-.user p{
-    color: #FDABB5;
+
+.fotoPost{
+    height: 60%;
+    width: 100%;
+}
+.botao{
+    background: none;
+    border: none;
+    height: 50px;
+    color: #E70073;
     font-size: 40px;
-    padding-bottom: 20px;
-    margin-left: 300px;
+    cursor: pointer;
 }
-.post_content img{
-    width: 557px;
-    height: 420px;
-    
+.botao img{
+    height: 30px;
+    width: 30px;
 }
-.buttons img{
-    height: 37.88px;
-    width: 35px;
-    padding-right: 5px;
-    padding-left: 5px;
-}
-.buttons{
-    display: flex;
-    justify-content: flex-end;
-}
-.post_content p{
-    font-size: 15px;
+.textoPost{
     font-family: 'Kanit', sans-serif;
-    padding-left: 5px;
+    font-size: 15px;
+}
+.headerPost{
+    display: flex;
+    padding: 20px;
+}
+.headerPost h1{
+    margin-left: 10px;
+}
+.headerPost button{
+    margin-left: 50%;
+}
+.botoes{
+    display: inline;
+    align-self: flex-end;
+    padding-right: 10px;
+}
+.areaTexto{
+    padding: 10px;
 }
 
-/*Campo de postagens*/
 #timeline{
     display: flex;
     margin: 50px;
-    display: flex;
-    justify-content: center;
+    width: 90%;
+    
+    flex-direction: column;
+    align-self: center;
+    flex-wrap: wrap;
+    flex-grow: 1;
 }
