--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 header{
     position: sticky;
     top: 0;
-    height: 10%;
+    height: fit-content;
     width: 100%;
     display: flex;
     align-items: center;
@@ -68,7 +68,7 @@ header{
 .post{
     display: flex;
     flex-direction: column;
-    width: 35%;
+    width: fit-content;
     height: fit-content;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 23px;
