--- a/style.css
+++ b/style.css
@@ -3,16 +3,19 @@ body{
     height: 100vh;
     display: flex;
     flex-direction: column;
+    background-attachment: fixed;
+    background-image: url("./src/background_img.png");
 }
 header{
     position: sticky;
     top: 0;
-    height: fit-content;
+    height: 12%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-bottom: 10px;
+    padding-top: 5px;
     border-bottom: 1px solid #E0DADA;
     box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
     -webkit-box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
