--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header{
     align-items: center;
     justify-content: space-between;
     padding-bottom: 10px;
-    padding-top: 5px;
+    padding-top: 10px;
     border-bottom: 1px solid #E0DADA;
     box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
     -webkit-box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
@@ -26,8 +26,8 @@ header{
     flex-direction: row;
 }
 .logo img{
-    height: 70px;
-    width: 70px;
+    height: 60px;
+    width: 60px;
 }
 .logo h1{
     color: white;
@@ -43,11 +43,13 @@ header{
     color: #C1B0B3;
     opacity: 0.5;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
 
 
 }
 .search input:focus{
     outline: none;
+    scale: 1.1;
 }
 
 .perfil{
