--- a/Perfil/style.css
+++ b/Perfil/style.css
@@ -74,7 +74,7 @@ header{
     display: flex;
     flex-direction: column;
     padding: 2px;
-    margin-left: 50px;
+    margin-left: 10px;
     align-items: center;
 }
 .editarPerfil{
@@ -107,4 +107,17 @@ header{
 }
 .engrenagem{
     padding-right: 50px;
+}
+.voltar{
+    margin-bottom: 250px;
+    margin-left: 50px;
+}
+.voltar img{
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+}
+a{
+    color: inherit;
+    text-decoration: none;
 }
