--- a/Perfil/style.css
+++ b/Perfil/style.css
@@ -66,7 +66,7 @@ header{
     background-color: var(--rosinha);
     padding: 7px;
     height: fit-content;
-    width: fit-content;
+    max-width: 250px;
     text-align: center;
     
 }
