--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ input::placeholder{
     border-radius: 50px;
 }
 #menu{
-    height: 50px;
-    width: 50px;
+    height: 3.12 rem;
+    width: 3.12 rem;
     margin-right: 10px;
 }
 /*Novo estilo:*/
