--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ body{
 header{
     position: sticky;
     top: 0;
-    height: 3rem;
+    height: 50px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    padding-bottom: 5px;
+    padding-top: 5px;
     border-bottom: 1px solid #E0DADA;
     box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
     -webkit-box-shadow: -1px 17px 18px 0px rgba(115,90,90,0.21);
@@ -32,7 +32,7 @@ header{
 .logo h1{
     color: white;
     font-family: 'Kanit', sans-serif;
-    font-size: 24px;
+    font-size: 1.25rem;
 }
 .search{
     position: relative;
