--- a/style.css
+++ b/style.css
@@ -44,15 +44,15 @@ header{
     margin-left: 10px;
 }
 span img{
-    height: 25px;
-    width: 25px;
+    height: 1.25rem;
+    width: 1.25rem;
 }
 input::placeholder{
     padding-left: 30px;
 }
 .search input{
-    height: 40px;
-    width: 200px;
+    height: 2.5rem;
+    width: 9.3rem;
     border-radius: 300px;
     border: none;
     padding-left: 10px;
@@ -78,14 +78,18 @@ input::placeholder{
 .fotoHeader{
     margin-right: 10px;
     margin-left: 15px;
-    height: 50px;
-    width: 50px;
+    height: 2.5rem;
+    width: 2.5rem;
     border-radius: 50px;
 }
 #menu{
     height: 2rem;
     width: 2rem;
     margin-right: 10px;
+}
+#menu img{
+height: 2.5rem;
+   width: 2.5rem;
 }
 /*Novo estilo:*/
 
