--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@ input::placeholder{
     padding-left: 30px;
 }
 .search input{
-    height: 2.5rem;
-    width: 9.3rem;
+    height: 1.9rem;
+    width: 11.25rem;
     border-radius: 300px;
     border: none;
     padding-left: 10px;
@@ -83,6 +83,7 @@ input::placeholder{
     border-radius: 50px;
 }
 #menu{
+    top:0;
     height: 2rem;
     width: 2rem;
     margin-right: 10px;
