--- a/style.css
+++ b/style.css
@@ -83,13 +83,13 @@ input::placeholder{
     border-radius: 50px;
 }
 #menu{
-    top:0;
+   
     height: 2rem;
     width: 2rem;
     margin-right: 10px;
 }
-#menu img{
-height: 2.5rem;
+.menuIcon{
+   height: 2.5rem;
    width: 2.5rem;
 }
 /*Novo estilo:*/
