--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ input::placeholder{
     display: flex;
     flex-direction: row;
     color: #E70073;
-    font-size: 15px;
+    font-size: 1rem;
     font-family: 'Kanit', sans-serif;
     margin-right: 70px;
     
